==> ExplorerBear/SimpleOSC-SG/Drivers/UserDriver/Src/OLED.c <==
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_WriteCommand(uint8_t Command)
{
	uint8_t Sendbyte[2]= {0x00,};
	Sendbyte[1] = Command;
	HAL_I2C_Master_Transmit(&IIC,IIC_Addr,Sendbyte,2,200);
	//HAL_I2C_Master_Transmit_DMA(&IIC,IIC_Addr,Sendbyte,2);
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
	uint8_t *Sendbyte;
	Sendbyte = (uint8_t *)malloc((Count+1)*sizeof(uint8_t));
	SendByte_Addr = Sendbyte;
	*Sendbyte=0x40;
	for(uint8_t i=0;i<Count;i++)
	{
		*(Sendbyte+1+i) = *(Data+i);
	}
	
	#ifdef IIC_Mode_Blocking
	HAL_I2C_Master_Transmit(&IIC,IIC_Addr,Sendbyte,Count+1,200);
	free(Sendbyte);
	#endif
	
	#ifdef IIC_Mode_IT
	HAL_I2C_Master_Transmit_IT(&IIC,IIC_Addr,Sendbyte,Count+1);
	#endif
	
	#ifdef IIC_Mode_DMA
	HAL_I2C_Master_Transmit_DMA(&IIC,IIC_Addr,Sendbyte,Count+1);
	#endif
	
}
