==> suifengf/ti_study/oled/BSP/OLED/src/OLED.c <==
#include "ti_msp_dl_config.h" // 引入 TI DL 库核心配置头文件
#include "OLED.h"
#include <string.h>
#include <math.h>
#include <stdio.h>
#include <stdarg.h>

void OLED_WriteCommand(uint8_t Command)
{
    uint8_t Send_Buff[2];
    Send_Buff[0] = 0x00; // 0x00 表示接下来的字节是命令
    Send_Buff[1] = Command;

    // 1. 先把数据填入发送 FIFO
    DL_I2C_fillControllerTXFIFO(I2C_OLED_INST, Send_Buff, 2);
    // 2. 等待 I2C 控制器处于空闲状态 (极其重要，防止死机)
    while (!(DL_I2C_getControllerStatus(I2C_OLED_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
    // 3. 启动 2 个字节的传输，地址固定为 0x3C
    DL_I2C_startControllerTransfer(I2C_OLED_INST, 0x3C, DL_I2C_CONTROLLER_DIRECTION_TX, 2);
}

void OLED_WriteData(uint8_t *Data, uint8_t Count)
{
    uint8_t i;
    uint8_t Send_Buff[2];
    Send_Buff[0] = 0x40; // 0x40 表示接下来的字节是数据

    /* * 江协科技的库每次会连续发送大量数据 (Count=128)。
     * 为了保证 100% 不卡死，我们采用你成功代码里的方案：
     * 拆分成 "1个控制字 + 1个数据" 的 2字节包，循环发送
     */
    for (i = 0; i < Count; i++)
    {
        Send_Buff[1] = Data[i];
        
        DL_I2C_fillControllerTXFIFO(I2C_OLED_INST, Send_Buff, 2);
        while (!(DL_I2C_getControllerStatus(I2C_OLED_INST) & DL_I2C_CONTROLLER_STATUS_IDLE));
        DL_I2C_startControllerTransfer(I2C_OLED_INST, 0x3C, DL_I2C_CONTROLLER_DIRECTION_TX, 2);
    }
}
